<resources>
    <string name="app_name">Appomart tasker test</string>
<!--    auth screen-->
    <string name="label_greetings">Приветствую! Авторизуйтесь.</string>
    <string name="hint_login">Логин</string>
    <string name="hint_password">Пароль</string>
    <string name="action_log_in">Войти</string>
    <string name="authentication_failed">Авторизация не удалась</string>
    <string name="error_authentication">Ошибка: </string>
    <string name="please_fill_all_fields">Пожалуйста, заполните поля перед авторизацией</string>
<!--    orders screen-->
    <string name="action_log_out">Выйти из аккаунта</string>
    <string name="label_list_of_orders">Список заказов</string>
    <string name="label_order_id">ID заказа: %d</string>
    <string name="label_order_name">Название: %s</string>
    <string name="label_order_description">Описание: %s</string>
    <string name="label_order_status">Статус: </string>
    <string name="label_order_price">Стоимость(₽): </string>
    <string name="label_order_commentary">Комментарий: %s</string>
    <string name="action_change">Изменить</string>
    <string name="label_price_not_assigned">Не указана</string>
    <string name="label_commentary_not_assigned">Не указан</string>
    <string name="error_cannot_change_status">Нельзя изменить статус у выбранного заказа!</string>
    <string name="error_changing_status">Не удалось изменить статус</string>
    <string name="success_status_changed">Статус успешно обновлен</string>
<!--    order status-->
    <string name="label_new">Новый</string>
    <string name="label_in_progress">Выполняется</string>
    <string name="label_canceled">Отменен</string>
    <string name="label_finished">Выполнен</string>
    <string name="label_closed">Завершен</string>
<!--    dialog status-->
    <string name="set_new_data">Установите новые данные:</string>
    <string name="button_change">Изменить</string>
    <string name="button_cancel">Отмена</string>
    <string name="input_price">Введите стоимость</string>
    <string name="input_commentary">Введите комментарий</string>
    <string name="error_fill_all_fields">Ошибка: Перед завершением заказа заполните все поля</string>
<!--    maps fragment-->
    <string name="labels_list_of_orders_on_map">Список заказов на карте</string>
    <string name="action_back_to_orders_list">Вернутся к списку заказов</string>
</resources>