<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="6dp"
    android:backgroundTint="?colorSecondary"
    android:layout_marginBottom="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp">

        <TextView
            android:id="@+id/text_order_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_order_id"
            style="@style/RobotoMedium"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"
            android:textColor="?colorOnPrimaryContainer"/>

        <TextView
            android:id="@+id/text_order_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_order_name"
            style="@style/RobotoMedium"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"
            android:textColor="?colorOnPrimaryContainer"/>

        <TextView
            android:id="@+id/text_order_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_order_description"
            style="@style/RobotoMedium"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"
            android:textColor="?colorOnPrimaryContainer"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_order_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_order_status"
                style="@style/RobotoMedium"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"
                android:textColor="?colorOnPrimaryContainer"/>

            <TextView
                android:id="@+id/change_order_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/action_change"
                style="@style/RobotoMedium"
                android:textSize="15sp"
                android:layout_marginBottom="10dp"
                android:textColor="?colorControlActivated"/>

        </LinearLayout>

        <TextView
            android:id="@+id/text_order_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_order_price"
            style="@style/RobotoMedium"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"
            android:textColor="?colorOnPrimaryContainer"/>

        <TextView
            android:id="@+id/text_order_commentary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_order_commentary"
            style="@style/RobotoMedium"
            android:textSize="16sp"
            android:textColor="?colorOnPrimaryContainer"/>

    </LinearLayout>


</androidx.cardview.widget.CardView>