<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:backgroundTint="?colorPrimaryContainer"
    app:cardCornerRadius="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_order_id"
            style="@style/RobotoMedium.TextStyleItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_order_id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_order_name"
            style="@style/RobotoMedium.TextStyleItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_order_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_order_id" />

        <TextView
            android:id="@+id/text_order_description"
            style="@style/RobotoMedium.TextStyleItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_order_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_order_name" />

        <TextView
            android:id="@+id/text_order_status"
            style="@style/RobotoMedium.TextStyleItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="6dp"
            android:text="@string/label_order_status"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_order_description" />

        <TextView
            android:id="@+id/order_status"
            style="@style/RobotoMedium.TextStyleItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="0dp"
            app:layout_constraintStart_toEndOf="@id/text_order_status"
            app:layout_constraintTop_toTopOf="@id/text_order_status"
            tools:text="@string/label_new" />

        <TextView
            android:id="@+id/text_order_price"
            style="@style/RobotoMedium.TextStyleItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="6dp"
            android:text="@string/label_order_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_order_status" />
        `

        <TextView
            android:id="@+id/order_price"
            style="@style/RobotoMedium.TextStyleItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="0dp"
            app:layout_constraintStart_toEndOf="@id/text_order_price"
            app:layout_constraintTop_toTopOf="@id/text_order_price"
            tools:text="500" />

        <TextView
            android:id="@+id/text_order_commentary"
            style="@style/RobotoMedium.TextStyleItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_order_commentary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_order_price" />

        <ImageView
            android:id="@+id/change_order_status"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/action_change"
            android:src="@drawable/ic_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/show_order_on_maps"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/action_change"
            android:src="@drawable/ic_location"
            app:layout_constraintEnd_toStartOf="@+id/change_order_status"
            app:layout_constraintTop_toTopOf="@+id/change_order_status" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>